objects/Product_Pricing_Field__c.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Field_Name__c</fullName>
        <label>Service Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Pricing</label>
    <nameField>
        <label>Product Pricing Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Pricing Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>